k8s/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ceo-era
  annotations:
    external-dns.alpha.kubernetes.io/hostname: dev-ceo-era.xinobi.net
spec:
  rules:
    - host: dev-ceo-era.xinobi.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
