k8s/overlays/dev/virtualservice-patch.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: ceo-era
spec:
  hosts:
    - dev-ceo-era.xinobi.net
